fixing streamfield spacing

--- a/tbx/static_src/sass/components/_streamfield.scss
+++ b/tbx/static_src/sass/components/_streamfield.scss
@@ -211,4 +211,8 @@
             }
         }
     }
+
+    .proposition-section & {
+        margin: 0;
+    }
 }
